# mtb-mcp

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: api-integration-agent.md  intelligence-agent.md  testing-agent.md
config/searxng/: settings.yml
docs/: API_RESEARCH.md  API_SPEC.md  ARCHITECTURE.md  COMMUNITY_RESEARCH.md  COMPETITIVE_LANDSCAPE.md  CONTEXT_REFRESH.md  DEVICE_INTEGRATION_RESEARCH.md  FEATURE_BACKLOG.md  USE_CASES.md
docs/adr/: ADR-001-python.md  ADR-002-fastmcp.md  ADR-003-sqlite.md  ADR-004-brouter.md  ADR-005-dwd.md  ADR-006-kompy.md  ADR_INDEX.md
docs/sprints/: COMMUNITY_PLAN.md  SPRINT_PLAN.md
scripts/: setup_brouter_data.sh  strava_oauth_setup.py
src/: index.ts
src/mtb_mcp/: __main__.py  cli.py  config.py  http_server.py  server.py
src/mtb_mcp/api/: deps.py  main.py  models.py
src/mtb_mcp/auth/: __init__.py  dependencies.py  encryption.py  jwt.py  models.py  strava_oauth.py
src/mtb_mcp/ble/: __init__.py  heart_rate.py  scanner.py  tyrewiz.py
src/mtb_mcp/clients/: base.py  bosch.py  brouter.py  dwd.py  gpstour.py  komoot.py  mtbproject.py  ors.py  overpass.py  strava.py  trailforks.py  wahoo.py
src/mtb_mcp/intelligence/: __init__.py  ebike_range.py  fitness_tracker.py  ride_score.py  tour_fusion.py  trail_condition.py  trail_tagger.py  training_planner.py  wear_engine.py  weekend_planner.py
src/mtb_mcp/models/: activity.py  bike.py  common.py  fitness.py  ride_score.py  route.py  sensor.py  tour.py  trail.py  weather.py
src/mtb_mcp/storage/: __init__.py  bike_garage.py  cache.py  database.py  migrations.py  training_store.py  user_store.py
src/mtb_mcp/tools/: ebike_tools.py  fitness_tools.py  intelligence_tools.py  maintenance_tools.py  routing_tools.py  safety_tools.py  sensor_tools.py  strava_tools.py  tour_search_tools.py  trail_tools.py  weather_tools.py
src/mtb_mcp/utils/: geo.py  gpx.py  rate_limiter.py  units.py
tests/: conftest.py
tests/fixtures/api_responses/: brightsky_alerts.json  brightsky_current_weather.json  brightsky_current_weather_rain.json  brightsky_rain_history.json  brightsky_weather.json  brouter_route.gpx  gpstour_detail.html  komoot_login.json  komoot_tour_detail.json  komoot_tours.json  ors_directions.json  overpass_empty.json  overpass_trail_detail.json  overpass_trails.json  (+9 more)
tests/integration/: conftest.py  test_api_bikes.py  test_api_dashboard.py  test_api_ebike.py  test_api_health.py  test_api_safety.py  test_api_system.py  test_api_tours.py  test_api_trails.py  test_api_training.py  test_api_weather.py
tests/unit/: test_activity_models.py  test_base_client.py  test_bike_garage.py  test_ble_scanner.py  test_brouter_client.py  test_cache.py  test_config.py  test_database.py  test_dwd_client.py  test_ebike_range.py  test_ebike_tools.py  test_fitness_models.py  test_fitness_tools.py  test_fitness_tracker.py  test_geo_utils.py  test_gpstour_client.py  test_gpx_utils.py  test_intelligence_tools.py  test_komoot_client.py  test_maintenance_tools.py  test_models.py  test_ors_client.py  test_overpass_client.py  test_rate_limiter.py  test_ride_score.py  test_route_models.py  test_routing_tools.py  test_safety_tools.py  test_sensor_models.py  test_sensor_tools.py  test_strava_client.py  test_strava_tools.py  test_stub_clients.py  test_tour_fusion.py  test_tour_models.py  test_tour_search_tools.py  test_trail_condition.py  test_trail_models.py  test_trail_tagger.py  test_trail_tools.py  (+6 more)
webapp/: index.html  next.config.ts  package.json  playwright.config.ts
webapp/e2e/: bike.spec.ts  dashboard.spec.ts  ebike.spec.ts  navigation.spec.ts  safety.spec.ts  tours.spec.ts  trails.spec.ts  training.spec.ts  weather.spec.ts
(+57 files in other folders)
