[tool.poetry]
name = "mtb-mcp"
version = "0.1.0"
description = "TrailPilot MCP Server — MTB Copilot for Strava, Komoot, trail conditions, weather-aware ride planning"
authors = ["klapom"]
readme = "README.md"
license = "MIT"
keywords = ["mcp", "mountainbike", "mtb", "strava", "komoot", "trails", "nanoclaw"]
packages = [{include = "mtb_mcp", from = "src"}]

# ============================================================================
# CORE DEPENDENCIES
# ============================================================================
[tool.poetry.dependencies]
python = ">=3.12,<3.14"

# MCP SDK
mcp = {extras = ["cli"], version = "^1.3.0"}

# Data Models & Config
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.0"

# HTTP & Resilience
httpx = "^0.28.0"
tenacity = "^8.1.0"

# Logging
structlog = "^24.4.0"

# Storage
aiosqlite = "^0.20.0"

# Geo & GPX
gpxpy = "^1.6.0"
geopy = "^2.4.0"

# Scraping
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"

# API Wrappers
stravalib = "^2.0.0"
kompy = "^0.0.12"

# REST API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.42.0"}

# Auth
PyJWT = "^2.8"
bcrypt = "^4.1"
cryptography = "^42"

# ============================================================================
# OPTIONAL GROUPS
# ============================================================================
[tool.poetry.group.ble]
optional = true

[tool.poetry.group.ble.dependencies]
bleak = "^0.22.0"

# ============================================================================
# DEVELOPMENT DEPENDENCIES
# ============================================================================
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
respx = "^0.22.0"
ruff = "^0.14.0"
mypy = "^1.11.0"
bandit = "^1.7.9"
pre-commit = "^4.0.0"

# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]
"src/mtb_mcp/api/**/*" = ["B008"]
"src/mtb_mcp/auth/**/*" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["mtb_mcp"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "stravalib.*",
    "kompy.*",
    "gpxpy.*",
    "geopy.*",
    "bleak.*",
    "bs4.*",
    "lxml.*",
    "aiosqlite.*",
    "uvicorn.*",
    "jwt.*",
    "bcrypt.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests (>5s)",
]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]
